backend/crates/api/tests/snapshots/golden_wire__account_created.snap
---
source: backend/crates/api/tests/golden_wire.rs
expression: created
---
{
  "did": "<VOLATILE>",
  "handle": "golden.zurfur.app",
  "id": "<VOLATILE>",
  "name": "Golden Studio"
}
