backend/crates/api/tests/snapshots/golden_wire__account_listed.snap
---
source: backend/crates/api/tests/golden_wire.rs
expression: body
---
{
  "accounts": [
    {
      "did": "<VOLATILE>",
      "handle": "golden.zurfur.app",
      "id": "<VOLATILE>",
      "name": "Golden Studio",
      "role": "owner"
    }
  ]
}
