backend/crates/api/tests/snapshots/golden_wire__commission_created.snap
---
source: backend/crates/api/tests/golden_wire.rs
expression: created
---
{
  "createdAt": "<TS>Z",
  "id": "<VOLATILE>",
  "lifecycle": "draft",
  "maturity": {
    "rating": "safe"
  },
  "title": "A golden ref sheet",
  "visibility": "private"
}
