backend/crates/api/tests/snapshots/golden_wire__me_partial.snap
---
source: backend/crates/api/tests/golden_wire.rs
expression: body
---
{
  "did": "<VOLATILE>",
  "handle": "bare.bsky.social"
}
