backend/crates/api/tests/snapshots/golden_wire__me_resolved.snap
---
source: backend/crates/api/tests/golden_wire.rs
expression: body
---
{
  "avatarUrl": "https://pds.example/a.jpg",
  "did": "<VOLATILE>",
  "displayName": "Golden",
  "handle": "golden.bsky.social"
}
